fix pic problems

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!-- 2nd box-->
             <div class="box">
                 <div class="content">
-                    <img src="images/category_street.jpg">
+                    <img src="images/category_street1.jpg">
                     <h3>Street Foods</h3>
                 </div>
             </div>
