--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
 
     <!-- game -->
     <section class="game" id="game">
-        <h1 class="heading">Food Game - What to eat today? </h1><span></span>
+        <h1 class="heading">Mini Food Game - What to eat today? </h1><span></span>
         <div class="content">
             <p>It’s always a challenge to decide what to eat in Taiwan because every dish is so delicious. This game is
-                here to help you make that tough choice! If you live in Taiwan, you know exactly what I mean!</p>
-            <p>Please select your preferred categories below.</p>
+                here to help you make that tough choice!</p>
+            <p>If you live in Taiwan, you know exactly what I mean! Please select your preferred categories below.</p>
         </div>
         <div class="filter-bar">
             <div class="category-option selected" data-category="traditional">Traditional Dishes</div>
